--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupCurrency.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupCurrency.cshtml
@@ -1,5 +1,6 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @using Boltzrpc
+@using BTCPayServer.Plugins.Boltz
 @model BTCPayServer.Plugins.Boltz.Models.WalletSetup
 @{
     Layout = "_LayoutSetup";
