--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupStandalone.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupStandalone.cshtml
@@ -20,6 +20,6 @@
     Note: Boltz swaps are non-custodial, but the Liquid Network is run a by a federation and requires trusting the entities in the federation to guard L-BTC, the Liquid representation of Bitcoin. Learn more about the Liquid network here.
 </p>
 
-<a asp-controller="Boltz" asp-action="SetupWallet" asp-route-storeId="@storeId" asp-route-flow="@WalletSetupFlow.Standalone" asp-route-currency="@Currency.Lbtc" class="btn btn-success">
+<a asp-controller="Boltz" asp-action="SetupWallet" asp-route-storeId="@storeId" asp-route-flow="@WalletSetupFlow.Standalone" class="btn btn-success">
     Continue
 </a>
