--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/_Nav.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/_Nav.cshtml
@@ -1,40 +1,27 @@
-@using BTCPayServer.Abstractions.Extensions
-@using BTCPayServer.Abstractions.TagHelpers
 @using BTCPayServer.Client
 @using BTCPayServer.Plugins.Boltz
-@using BTCPayServer.Plugins.Boltz.Views
 @using BTCPayServer.Security
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@using AngleSharp.Common
 @inject BoltzService BoltzService
 @{
-    var storeId = Model switch
-    {
-        string s => s,
-        StoreDashboardViewModel dashboardModel => dashboardModel.StoreId,
-        _ => Context.GetImplicitStoreId()
-    };
-    var client = BoltzService.GetClient(storeId);
+    var storeId = Context.GetImplicitStoreId();
 }
 
-@if (!(bool)ViewData.GetOrDefault("IsSetup", false))
-{
-    <div class="sticky-header mb-l">
-        <div class="d-flex flex-row justify-content-between mt-1 mb-2 mb-lg-4">
-            <h2>Boltz</h2>
-            <a asp-action="SetupMode" asp-route-storeId="@storeId" class="btn btn-secondary text-nowrap">
-                Setup
-            </a>
-        </div>
-        @if (client is not null)
-        {
-            <nav id="SectionNav">
-                <div class="nav">
-                    <a permission="@Policies.CanViewStoreSettings" asp-controller="Boltz" asp-action="Status" asp-route-storeId="@storeId" class="nav-link @ViewData.IsActivePage("Boltz", null, "Status")">Info</a>
-                    <a permission="@Policies.CanViewStoreSettings" asp-controller="Boltz" asp-action="Configuration" asp-route-storeId="@storeId" class="nav-link @ViewData.IsActivePage("Boltz", null, "Configuration")">Configuration</a>
-                    <a permission="@Policies.CanViewStoreSettings" asp-controller="Boltz" asp-action="Admin" asp-route-storeId="@storeId" class="nav-link @ViewData.IsActivePage("Boltz", null, "Admin")">Admin</a>
-                </div>
-            </nav>
-        }
+<div class="sticky-header mb-l">
+    <div class="d-flex flex-row justify-content-between mt-1 mb-2 mb-lg-4">
+        <h2>Boltz</h2>
+        <a asp-action="SetupMode" asp-route-storeId="@storeId" class="btn btn-secondary text-nowrap">
+            Setup
+        </a>
     </div>
-}
+    @if (BoltzService.StoreConfigured(storeId))
+    {
+        <nav id="SectionNav">
+            <div class="nav">
+                <a permission="@Policies.CanViewStoreSettings" asp-controller="Boltz" asp-action="Status" asp-route-storeId="@storeId" class="nav-link @ViewData.IsActivePage("Boltz", null, "Status")">Status</a>
+                <a permission="@Policies.CanViewStoreSettings" asp-controller="Boltz" asp-action="Configuration" asp-route-storeId="@storeId" class="nav-link @ViewData.IsActivePage("Boltz", null, "Configuration")">Configuration</a>
+                <a permission="@Policies.CanViewStoreSettings" asp-controller="Boltz" asp-action="Admin" asp-route-storeId="@storeId" class="nav-link @ViewData.IsActivePage("Boltz", null, "Admin")">Admin</a>
+            </div>
+        </nav>
+    }
+</div>
