--- a/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/_Stats.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/_Stats.cshtml
@@ -1,6 +1,6 @@
 @using BTCPayServer.Plugins.Boltz.Models
 @model List<BTCPayServer.Plugins.Boltz.Models.Stat>
-<div class="d-flex flex-row flex-wrap gap-5">
+<div class="d-flex flex-row flex-wrap row-gap-1 column-gap-5">
     @foreach (var stat in Model)
     {
         <div class="d-flex flex-column gap-1">
