--- a/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/_Stats.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/_Stats.cshtml
@@ -4,7 +4,7 @@
     @foreach (var stat in Model)
     {
         <div class="d-flex flex-column gap-1">
-            <h6 class="text-truncate text-secondary">@stat.Name</h6>
+            <h6 class="text-truncate text-secondary mb-0">@stat.Name</h6>
             <div class="d-flex flex-row align-items-baseline gap-1">
                 <h5>@stat.Value</h5>
                 @if (stat.Unit != Unit.None)
